Add skip and limit in list to api.yaml
